<resources>
    <string name="app_name">WorkshopApplication</string>
    <string name="welcome_in_app">Hello in TT Workshop App!</string>
    <string name="intents">Intents</string>
    <string name="fragments">Fragments</string>
    <string name="recycler_view">Recycler View</string>
    <string name="send_message">Send Message</string>
    <string name="person">Person</string>
    <string name="message">message</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="usage_message_pattern">Use message pattern</string>
    <string name="subject">Subject</string>
    <string name="send_mail_with">Send Main with:</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
