<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bluewallpaper"
    tools:context="com.tomtom.workshop.workshopapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/welcome_in_app"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="23sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="12"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="250dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/intents_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/intents"
            style="@style/buttonStyles"
            android:layout_weight="4"
            />

        <Button
            android:id="@+id/fragments_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fragments"
            style="@style/buttonStyles"
            android:layout_weight="4"
            />

        <Button
            android:id="@+id/recycler_view_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/recycler_view"
            style="@style/buttonStyles"
            android:layout_weight="4"
            />
    </LinearLayout>
</LinearLayout>
