<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluewallpaper"
    android:orientation="vertical"
    tools:context="com.tomtom.workshop.workshopapplication.IntentActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColor="@android:color/white"
        android:text="@string/send_message"
        android:textSize="33dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/et_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/person"
        android:padding="5dp"
        android:singleLine="true"
        android:background="@drawable/button_background"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/et_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/subject"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_background"
        android:padding="5dp"
        android:singleLine="true"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/white"/>

    <EditText
        android:id="@+id/et_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/message"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_background"
        android:padding="5dp"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/send_message"
        android:layout_gravity="center"
        style="@style/buttonStyles"/>

</LinearLayout>
